# SpatialFusion-LM

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  README.md  run_container.sh
docker/: Dockerfile  entrypoint.sh
scripts/: download_dataset.sh  download_replica.sh  download_sample.sh  download_weights.sh
spatialfusion-lm/ros2_ws/src/llm_ros/: CMakeLists.txt  package.xml
spatialfusion-lm/ros2_ws/src/llm_ros/config/: llm.rviz
spatialfusion-lm/ros2_ws/src/llm_ros/launch/: llm.launch.py  llm_demo.launch.py  llm_demo_replica.launch.py  llm_demo_tum.launch.py
spatialfusion-lm/ros2_ws/src/llm_ros/scripts/: core_node.py  mono.py  rerun_vis.py  spatialLM.py  stereo.py
